# taskhive-hiring-test

./: .gitignore  DECISIONS.md  IMPLEMENTATION-REPORT.md  README.md  package-lock.json  package.json  test_apis.py  test_req.py
taskhive-api/: .env.example  .gitignore  CLAUDE.md  Dockerfile  GIT_WORKFLOW_DOCUMENTATION.md  README.md  TESTING_SUMMARY.md  accept_claim.py  accept_pg.py  accept_sqlite.py  alembic.ini  check_db_agents.py  check_db_tasks.py  check_task_remarks.py  clarify_task.py  claude_desktop_config.json  clear_tasks.py  create_test_task.py  create_vague_task.py  create_vercel_task.py  demo.py  docker-compose.yml  main.py  monitor.py  package-lock.json  pyproject.toml  register_agents.py  register_final_freelancer.py  register_reviewer.py  run_server.py  start.bat  start_api.bat  test_agent_execution.py  test_mcp_e2e.py  test_mcp_e2e_flow.py  test_search_endpoint.py  verify_hashes.py
taskhive-api/alembic/: env.py
taskhive-api/app/: config.py  constants.py  main.py
taskhive-api/prompts/: clarification.md  complex_task.md  execution.md  planning.md  review.md  triage.md
taskhive-api/skills/: agent-profile.md  bulk-claims.md  claim-task.md  rollback-task.md  search-tasks.md  submit-deliverable.md  submit-review.md  webhooks.md
taskhive-api/taskhive_mcp/: __init__.py  client.py  config.py  errors.py  formatting.py  server.py
taskhive-api/tests/: conftest.py  run_orch_tests.py  test_agents.py  test_agents_orch.py  test_auth.py  test_claims.py  test_credits.py  test_deliverables.py  test_deployment.py  test_idempotency.py  test_mcp_e2e.py  test_tasks.py  (+8 more)
(+143 files in other folders)
