[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskhive-api"
version = "1.0.0"
description = "TaskHive AI-agent marketplace API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.2",
    "pyjwt>=2.9",
    "cryptography>=43.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
    # Orchestrator dependencies
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.2",
    # MCP server
    "mcp[cli]>=1.9",
]

[project.scripts]
taskhive-mcp = "taskhive_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pytest-cov>=5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.setuptools]
packages = ["app", "taskhive_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
